<resources>
    <string name="sign_in_email_label">Email</string>
    <string name="sign_in_password_label">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_no_account">Don\'t have an account?</string>
    <string name="sign_in_sign_up_link">Sign up</string>
    <string name="sign_up_name_label">Name</string>
    <string name="sign_up_role_label">I am a</string>
    <string name="sign_up_role_student">Student</string>
    <string name="sign_up_role_parent">Parent</string>
...
